# rag_vue

./: .gitignore  DEPLOYMENT.md  README.md  app.py  config_template.txt  pyproject.toml  requirements.txt  verify_deployment.py
.streamlit/: config.toml
auth/: __init__.py  authenticator.py
backend/: DEPLOYMENT.md  PERFORMANCE_NOTES.md  README.md  __init__.py  check_cloud_config.py  config_template.txt  index.py  main.py  pyproject.toml  requirements.txt  run.py  vercel.json
backend/api/: auth.py  chat.py  documents.py  sessions.py
backend/core/: config.py  dependencies.py  security.py
backend/database/: __init__.py  db_manager.py  document_dao.py  init_db.sql  message_dao.py  parent_child_dao.py
backend/services/: __init__.py  cache_service.py  checkpoint_manager.py  document_service.py  hybrid_retriever.py  rag_graph.py  rag_nodes.py  rag_service.py  rag_state.py  rag_tools.py  remote_embeddings.py  reranker.py  session_service.py  user_service.py  vector_store_service.py  vector_strategies.py
backend/tests/: test_db_manager.py  test_rag_service.py
backend/utils/: config.py  db_error_handler.py  deployment_check.py  document_cleaner.py  file_handler.py  parent_child_splitter.py  prompts.py  supabase_storage.py  text_splitter.py  token_counter.py
components/: __init__.py  auth_component.py  chat_interface.py  document_manager.py  session_list.py
database/: __init__.py  db_manager.py  document_dao.py  init_db.sql  message_dao.py  models.py  session_dao.py  user_dao.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: auth.ts  chat.ts  documents.ts
frontend/src/components/: Layout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chat.ts  documents.ts  uploads.ts
frontend/src/types/: api.ts  chat.ts  documents.ts  user.ts
frontend/src/utils/: request.ts
frontend/src/views/: Chat.vue  Documents.vue  Login.vue  Settings.vue
inference_service/: README.md  config.py  main.py  requirements.txt
rag_service/: DEPLOYMENT.md  README.md  __init__.py  main.py  pyproject.toml
rag_service/api/: __init__.py  chat.py  documents.py
rag_service/database/: __init__.py  db_manager.py  document_dao.py  init_db_postgres.sql  session_dao.py  user_dao.py
rag_service/services/: __init__.py  checkpoint_manager.py  document_processor.py  hybrid_retriever.py  rag_graph.py  rag_nodes.py  rag_service.py  rag_tools.py  reranker.py  vector_store_service.py  vector_strategies.py
rag_service/utils/: __init__.py  config.py  document_cleaner.py  file_handler.py  model_downloader.py  performance_monitor.py  supabase_storage.py  text_splitter.py
services/: __init__.py  document_service.py  rag_service.py  session_service.py  vector_store_service.py
tests/: test_db_manager.py  test_rag_service.py
utils/: __init__.py  config.py  file_handler.py  security.py  text_splitter.py
