[tool.poetry]
name = "rag-vue-monorepo"
version = "1.0.0"
description = "RAG 智能问答系统 - 前端 + Vercel 后端网关 + 本地 RAG Service 的多项目仓库"
authors = ["Jonas"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

