[project]
name = "rag-backend"
version = "1.0.0"
description = "RAG 智能问答系统后端（Vercel Serverless 部署）"
authors = [{ name = "Jonas" }]
requires-python = ">=3.10,<3.14"
dependencies = [
  "langchain>=1.0.0,<2.0.0",
  "langchain-anthropic>=1.0.0,<2.0.0",
  "langchain-core>=1.0.0,<2.0.0",
  "anthropic>=0.69.0,<1.0.0",
  "langchain-community>=0.4.1,<1.0.0",
  "filelock>=3.20.0,<4.0.0",
  "pypdf>=6.2.0,<7.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.11,<3.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "bcrypt>=5.0.0,<6.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "python-dotenv>=1.2.1,<2.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "mangum>=0.18.0,<1.0.0",
  "pydantic[email]>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "email-validator>=2.1.0",
  "jieba>=0.42.1,<1.0.0",
  "rank-bm25>=0.2.2,<1.0.0",
  "supabase>=2.0.0,<3.0.0",
  "tuspy>=0.2.4,<1.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "pinecone>=6.0.0,<7.0.0",
  "langchain-pinecone>=0.2.13,<1.0.0",
]

[tool.setuptools]
# 后端在 Vercel 中作为应用运行，不需要构建/发布为库，
# 关闭自动包发现以避免 Setuptools 因多目录报错。
packages = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

